--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -15,7 +15,7 @@
 <table class="table table-striped col-md-12" id="movies">
   <thead>
     <tr>
-      <th> {:class => @hilite['title']}=link_to 'Movie Title', movies_path(:sort 'title'), :id => 'title_header'</th>
+      <th> link_to 'Movie Title', movies_path(sort: 'title'), :class => 'highlight', :id => 'title_header' </th>
       <th>Rating</th>
       <th>Release Date</th>
       <th>More Info</th>
