--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -17,7 +17,7 @@
     <tr>
       <th><%= link_to "Movie Title", movies_path(:sort => 'title'), :class => 'highlight', :id => 'title_header' %> </th>
       <th>Rating</th>
-      <th>Release Date</th>
+      <th><%= link_to "Release Date", movies_path(:sort => 'release_date'), :class => 'highlight', :id => 'release_date_header' %></th>
       <th>More Info</th>
     </tr>
   </thead>
