--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -15,9 +15,13 @@
 <table class="table table-striped col-md-12" id="movies">
   <thead>
     <tr>
-      <th><%= link_to "Movie Title", movies_path(:sort => 'title'), :class => ("hilite" if params[:sort] == 'title'), :id => 'title_header' %> </th>
+    <th class="<%= @title_header %>">
+        <%= link_to 'Movies Title', movies_path(sort: "movies_title", home: true), id: 'title_header' %>
+      </th>
       <th>Rating</th>
-      <th><%= link_to "Release Date", movies_path(:sort => 'release_date'), :class => ("hilite" if params[:sort] == 'release_date'), :id => 'release_date_header' %></th>
+      <th class="<%= @release_date_header %>">
+        <%= link_to 'Release Date', movies_path(sort: "release_date", home: true), id: 'release_date_header' %>
+      </th>
       <th>More Info</th>
     </tr>
   </thead>
