--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -16,11 +16,11 @@
   <thead>
     <tr>
     <th class="<%= @title_header %>">
-        <%= link_to 'Movies Title', movies_path(:sort => 'title'), id: 'title_header' %>
+        <%= link_to 'Movies Title', movies_path(:sort => 'title' , home: true), id: 'title_header' %>
       </th>
       <th>Rating</th>
       <th class="<%= @release_date_header %>">
-        <%= link_to 'Release Date', movies_path(:sort => 'release_date'), id: 'release_date_header' %>
+        <%= link_to 'Release Date', movies_path(:sort => 'release_date', home: true), id: 'release_date_header' %>
       </th>
       <th>More Info</th>
     </tr>
